# MultiCmakePro_test

./: CMakeLists.txt  README.md  git.txt
common_tools/: CMakeLists.txt
common_tools/include/: common_type.h  function_type.h
common_tools/src/: function_type.c
main_test/: CMakeLists.txt
main_test/include/: main.h
main_test/src/: main.c
print_function/: CMakeLists.txt
print_function/include/: print_function.h
print_function/src/: print_function.c  test.c
